# workshop-eLLMental

./: .gitignore  README.md  build.gradle  index.html  notes.csv  populate.ps1  populate.sh  workshop.postman_collection.json
apps/qa-service/: README.md  build.py  pyproject.toml
apps/qa-service/semantic_book/: __main__.py
apps/qa-service/semantic_book/services/ingestion/: processing.py
apps/workshop-java/workshop/: build.gradle  readme.md
apps/workshop-java/workshop/src/main/resources/: The Pragmatic Programmer  - Dave Thomas, Andy Hunt.txt
apps/workshop-kotlin/workshop/: build.gradle.kts
apps/workshop-kotlin/workshop/src/main/resources/: application.yml
src/main/java/com/theagilemonkeys/workshop/: WorkshopApplication.java
src/main/java/com/theagilemonkeys/workshop/config/: EmbeddingsSpaceConfiguration.java
src/main/java/com/theagilemonkeys/workshop/controllers/: LearnController.java  SaveController.java  SearchController.java
src/main/java/com/theagilemonkeys/workshop/services/: EmbeddingsSpaceService.java
src/main/resources/: application.yml  application.yml.example
src/test/java/com/theagilemonkeys/workshop/: WorkshopApplicationTests.java
workshop-java/: build.gradle  settings.gradle
workshop-java/src/main/java/com/theagilemonkeys/workshop/: WorkshopApplication.java
workshop-java/src/main/resources/: application.yml
workshop-kotlin/: build.gradle.kts
workshop-kotlin/src/main/resources/: The Pragmatic Programmer  - Chapters 1 to 4.txt  application.yml
(+23 files in other folders)
